<resources>
    <string name="app_name">DGO</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="dgo_splash_screen">D-GO Splash Screen</string>
    <string name="slogan">Makes your work easy</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_re_offline">You are offline</string>
    <string name="connect_to_the_internet_to_continue">Connect to the Internet to Continue</string>
    <string name="try_again">Try Again</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="chat_seller">Chat Seller</string>
    <string name="chat_with_seller">Get in touch with the sellers and other in a glance</string>
    <string name="chat_with_seller_str">Chat Feature</string>
    <string name="previous">Previous</string>
    <string name="next">next</string>
    <string name="construction">Construction</string>
    <string name="construction_str">Construction Services</string>
    <string name="construction_str_txt">Easy to find and get construction services like labour, workers and many more</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_password_q">Forget Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_password">Show Password</string>
    <string name="logo">Logo</string>
    <string name="category_name">Category Name</string>
    <string name="we_provide_best_products">We provide best products.</string>
    <string name="category">Category</string>
    <string name="see_all">See All</string>
    <string name="new_products">New Products</string>
    <string name="popular_products">Popular Products</string>
    <string name="_new">New</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price: Rs</string>
    <string name="_90">90</string>
    <string name="new_product">New Product</string>
    <string name="price_rs">Price: Rs</string>
    <string name="add_address">Add Address</string>
    <string name="total">Total :</string>
    <string name="rs_00">Rs. 00</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="confirm_the_order_through_cash_on_delivery">Confirm the order through Cash On Delivery.</string>
    <string name="sand">Sand</string>
    <string name="_1">1</string>
    <string name="quantity">Quantity:</string>
    <string name="rs_500">Rs. 500</string>
    <string name="product_price_">Product Price:</string>
    <string name="product_name_">Product name:</string>
    <string name="kindly_choose_your_address_or_add_new">Kindly,Choose your Address or Add new…</string>
    <string name="add_address_">Add Address</string>
    <string name="continue_to_payment">Continue to payment</string>
    <string name="buy_now">Buy Now</string>
    <string name="_5000">5000</string>
    <string name="rs">Rs.</string>
    <string name="construction_sand_tends_to_be_used_in_construction_and_building_as_it_is_a_raw_material_construction_sand_is_a_pale_yellow_color_calcium_carbonate_is_derived_from_limestone_and_coal">Construction Sand tends to be used in construction and building, as it is a raw material. Construction Sand is a pale yellow color, calcium carbonate is derived from limestone and coal.</string>
    <string name="_4_0">4.0</string>
    <string name="rs_34_0">Rs. 34.0</string>
    <string name="woman_t_shirt">Woman T shirt</string>
    <string name="create_address">Create Address</string>
    <string name="name">Name</string>
    <string name="address_lane">Address Lane</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="item">Item</string>
    <string name="product">product</string>

</resources>