<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:orientation="vertical"
            android:background="@color/black">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/item" />

            <TextView
                android:id="@+id/item_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:text="@string/rs_34_0"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_nam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/woman_t_shirt"
                android:textColor="@color/white"
                android:fontFamily="@font/amethysta"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>