<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.NoInternetActivity"
    android:background="@color/yellow">


    <ImageView
        android:id="@+id/dgo_no_internet"
        android:layout_width="245dp"
        android:layout_height="355dp"
        android:contentDescription="@string/no_internet_connection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/ic_baseline_wifi_off_24" />

    <TextView
        android:id="@+id/offline_heading"
        android:layout_width="188dp"
        android:layout_height="53dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/you_re_offline"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/offline_subheading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dgo_no_internet" />

    <TextView
        android:id="@+id/offline_subheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/connect_to_the_internet_to_continue"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/check_internet_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-black"
        android:text="@string/try_again"
        android:onClick="tryagain"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offline_subheading" />

</androidx.constraintlayout.widget.ConstraintLayout>