<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.ChatActivity">

    <View
        android:id="@+id/char_seller_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/chat_seller_icon"
        android:layout_width="377dp"
        android:layout_height="242dp"
        android:contentDescription="@string/chat_seller"
        android:hapticFeedbackEnabled="false"
        android:src="@drawable/ic_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/char_seller_view"
        app:layout_constraintVertical_bias="0.249"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/chat_seller_title"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/chat_with_seller_str"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_seller_icon"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:layout_width="271dp"
        android:layout_height="101dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/chat_with_seller"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_seller_title"
        app:layout_constraintVertical_bias="0.207" />

    <Button
        android:id="@+id/chat_seller_previous"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_left"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-black"
        android:text="@string/previous"
        android:onClick="back"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/chat_seller_next"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:drawableEnd="@drawable/ic_right"
        android:fontFamily="sans-serif-black"
        android:text="@string/next"
        android:onClick="login"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>