<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailedActivity"
    android:background="@color/yellow">


    <ImageView
        android:id="@+id/detailed_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailed_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="#000000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Product Details"
        app:titleTextColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="373dp"
        android:layout_height="252dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp"
        android:translationY="-50dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_img"
        app:layout_constraintVertical_bias="0.101">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/detailed_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amethysta"
                    android:text="@string/product_name"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_toStartOf="@+id/my_rating"
                    android:fontFamily="@font/amethysta"
                    android:text="@string/_4_0"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RatingBar
                    android:id="@+id/my_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1" />
            </RelativeLayout>

            <TextView
                android:id="@+id/detailed_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amethysta"
                android:text="@string/construction_sand_tends_to_be_used_in_construction_and_building_as_it_is_a_raw_material_construction_sand_is_a_pale_yellow_color_calcium_carbonate_is_derived_from_limestone_and_coal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amethysta"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amethysta"
                    android:text="@string/rs"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/detailed_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amethysta"
                    android:text="@string/_5000"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/add_item"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="7dp"
                    android:src="@drawable/ic_baseline_add_circle" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/remove_item"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="7dp"
                    android:src="@drawable/ic_baseline_remove_circle_24" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buy_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
        android:drawableTint="@color/white"
        android:padding="14dp"
        android:text="@string/buy_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:layout_constraintVertical_bias="0.779"
        app:layout_constraintWidth_percent=".8" />


</androidx.constraintlayout.widget.ConstraintLayout>